# UncertaintyVisualization

./: .gitignore  CMakeLists.txt  GameDemo.mov  README.md  requirements.txt
Data/: Case020_0_deformation.nii  Case020_0_gt.nii  Case020_0_gt_label.nii  Case020_0_pred.nii  Case020_0_pred_22.nii  Case020_0_pred_label.nii  Case020_0_uncertainty.nii  Case020_0_uncertainty_23.nii
Data/Segmented Tumors/: Segmentation_2.nii  Segmentation_3.nii
ProbeTest/: CMakeLists.txt  ProbeTest.py
ProbeTest/Resources/UI/: ProbeTest.ui
UVIS/: CMakeLists.txt  UVIS.py
UVIS/Resources/UI/: UVIS.ui
UVIS/SpeechRecModule/: SpeechInterface.py
UVIS/UIVISLib/: AudioMode.py  BackgroundModifiedVisualization.py  CalculateAllFilters.py  ColorLUT.py  EvaluationGame.py  GameWithShapes.py  PlayGame.py  SegmentationGame.py  SingleLevel.py  TexModeVisualization.py  TumorBasedVis.py  UncertaintyForegroundVisualization.py  UsefulFunctions.py  utils.py
UVIS/UIVISLib/GameResults/: Mahsa_0.nii  Visualization_picked_by_users.json  g_0.nii  player_scores.json
